--- a/estilos.css
+++ b/estilos.css
@@ -104,6 +104,8 @@ h3{
   padding-left: 5px;
 }
 
+/** Hero section (banner) **/
+
 .hero-section{
     height: 70vh;
     background: url(img/image6.1.2.jpeg);
@@ -128,23 +130,7 @@ h3{
     display: flex;
     justify-content: center;
     margin: 3rem 1rem;
-}
-
-/** Tratamientos **/
-
-.wrap-tratamientos-section{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-}
-
-.item-tratamientos-section{
-    padding: 5rem;
-}
-
-.item-tratamientos-section img{
-    width: 350px;
-    height: 225px;
+    width: 100%;
 }
 
 /** Seccion "Acerca de mi" **/
@@ -195,6 +181,43 @@ h3{
 
 .wrap-text-column p{
         padding-bottom: 1rem;
+}
+
+/** Tratamientos **/
+
+.section-tratamientos-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px auto;
+    max-width: 1200px;
+    padding: 20px;
+}
+
+.wrap-tratamientos-section{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+.item-tratamientos-section{
+    flex: 1;
+    min-width: 250px;
+    margin: 0 10px;
+    padding: 20px;
+    border: 1px solid #2977d5;
+    border-radius: var(--border-r);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    text-decoration: none;
+    color: inherit;
+}
+
+.item-tratamientos-section img{
+    width: 100%;
+    height: 225px;
+    object-fit: cover;
+    margin-bottom: 15px;
 }
 
 /** Footer **/
